Provided augmented session context.